--- a/config/default.json.dist
+++ b/config/default.json.dist
@@ -13,6 +13,7 @@
   "show_divider": true,
   "show_help_link": true,
   "show_command_info": true,
+  "true_anonymous": true,
   "client_id": "",
   "client_secret": "",
   "signing_secret": "",
@@ -21,5 +22,6 @@
   "oauth_failure": "https://openpoll.slack.alcor.space/?oauth=error",
   "support_url": "https://www.buymeacoffee.com/kazualex",
   "mongo_url": "mongodb://localhost:27017",
-  "mongo_db_name": "open_poll"
+  "mongo_db_name": "open_poll",
+  "log_level": "debug"
 }
