Delete data from DB when poller delete a Poll

--- a/config/default.json.dist
+++ b/config/default.json.dist
@@ -23,5 +23,6 @@
   "support_url": "https://www.buymeacoffee.com/kazualex",
   "mongo_url": "mongodb://localhost:27017",
   "mongo_db_name": "open_poll",
+  "delete_data_on_poll_delete": true,
   "log_level": "debug"
 }
