Command to create poll in Menu, Default show_command_info to false as you can always access it from Menu

--- a/config/default.json.dist
+++ b/config/default.json.dist
@@ -12,8 +12,8 @@
   "help_link": "https://gitlab.com/kazualex/openpollslack.git",
   "compact_ui": true,
   "show_divider": true,
-  "show_help_link": true,
-  "show_command_info": true,
+  "show_help_link": false,
+  "show_command_info": false,
   "true_anonymous": true,
   "client_id": "",
   "client_secret": "",
