Able to Log to file

--- a/config/default.json.dist
+++ b/config/default.json.dist
@@ -7,24 +7,27 @@
   "use_response_url": true,
   "menu_at_the_end": false,
   "create_via_cmd_only": false,
-  "add_number_emoji_to_choice": false,
-  "add_number_emoji_to_choice_btn": false,
-  "help_link": "https://gitlab.com/kazualex/openpollslack.git",
-  "help_email": "https://gitlab.com/kazualex/openpollslack.git",
+  "add_number_emoji_to_choice": true,
+  "add_number_emoji_to_choice_btn": true,
+  "help_link": "https://github.com/polppol/openpollslack-i18n",
+  "help_email": "https://github.com/polppol/openpollslack-i18n",
   "compact_ui": true,
   "show_divider": true,
-  "show_help_link": false,
-  "show_command_info": false,
+  "show_help_link": true,
+  "show_command_info": true,
   "true_anonymous": true,
   "client_id": "",
   "client_secret": "",
   "signing_secret": "",
   "state_secret": "CHANGE ME",
-  "oauth_success": "https://openpoll.slack.alcor.space/?oauth=success",
-  "oauth_failure": "https://openpoll.slack.alcor.space/?oauth=error",
-  "support_url": "https://www.buymeacoffee.com/kazualex",
+  "oauth_success": "https://yoururlhere/?oauth=success",
+  "oauth_failure": "https://yoururlhere/?oauth=error",
+  "support_url": "https://www.buymeacoffee.com/polppol",
   "mongo_url": "mongodb://localhost:27017",
   "mongo_db_name": "open_poll",
   "delete_data_on_poll_delete": true,
-  "log_level": "debug"
+  "log_level_app": "debug",
+  "log_level_bolt": "debug",
+  "log_to_file": true,
+  "log_dir": "log"
 }
