--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "express": "^4.18.2",
     "glob": "^10.3.10",
     "helmet": "^7.1.0",
-    "mongodb": "^6.2.0"
+    "moment": "^2.29.4",
+    "mongodb": "^6.2.0",
+    "winston": "^3.11.0"
   }
 }
