--- a/config/default.json.dist
+++ b/config/default.json.dist
@@ -29,5 +29,6 @@
   "log_level_app": "debug",
   "log_level_bolt": "debug",
   "log_to_file": true,
-  "log_dir": "log"
+  "log_dir": "log",
+  "schedule_limit_hrs": 12
 }
