--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "cli-progress": "^3.12.0",
     "compression": "^1.7.4",
     "config": "^3.3.9",
+    "cron-parser": "^4.9.0",
     "express": "^4.18.2",
     "glob": "^10.3.10",
     "helmet": "^7.1.0",
     "moment": "^2.29.4",
     "mongodb": "^6.2.0",
+    "node-cron": "^3.0.3",
     "winston": "^3.11.0"
   }
 }
