--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "express": "^4.18.2",
     "glob": "^10.3.10",
     "helmet": "^7.1.0",
-    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "mongodb": "^6.2.0",
     "node-cron": "^3.0.3",
     "winston": "^3.11.0"
