Auto cleanup invalid Schedule, Bug fixed

--- a/config/default.json.dist
+++ b/config/default.json.dist
@@ -32,5 +32,6 @@
   "log_to_file": true,
   "log_dir": "logs",
   "schedule_limit_hrs": 11,
-  "schedule_max_run": 365
+  "schedule_max_run": 365,
+  "schedule_auto_delete_invalid_day": 30
 }
