--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "compression": "^1.7.4",
     "config": "^3.3.9",
     "cron-parser": "^4.9.0",
+    "cronstrue": "^2.44.0",
     "express": "^4.18.2",
     "glob": "^10.3.10",
     "helmet": "^7.1.0",
