--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "moment-timezone": "^0.5.43",
     "mongodb": "^6.2.0",
     "node-cron": "^3.0.3",
+    "uuid": "^9.0.1",
     "winston": "^3.11.0"
   }
 }
