Separate log level for file and console, fix invalid command return null poll instead of error message

--- a/config/default.json.dist
+++ b/config/default.json.dist
@@ -31,7 +31,9 @@
   "mongo_db_name": "open_poll",
   "delete_data_on_poll_delete": true,
   "log_level_app": "debug",
-  "log_level_bolt": "debug",
+  "log_level_app_file": "debug",
+  "log_level_bolt": "info",
+  "log_level_bolt_file": "debug",
   "log_to_file": true,
   "log_dir": "logs",
   "schedule_limit_hrs": 11,
